--- a/index.html
+++ b/index.html
@@ -9,9 +9,19 @@
   <div id="main-content">
     <h1>Task Lister Lite™️</h1>
 
-    <form id="create-task-form" action="" method="POST">
-      <label for="new-task-description">Task description:</label>
-      <input type="text" id="new-task-description" name="new-task-description" placeholder="description">
+    <form id="create-task-form" >
+      <label for="description">Task description:</label>
+      <input type="text" id="description" name="description" placeholder="description">
+      <label for="priority">Priority</label>
+      <select name="priority" id="priority">
+        <!-- <option value="high">High</option> -->
+        <option value="red">High</option>
+        <!-- <option value="med">Medium</option> -->
+        <option value="yellow">Medium</option>
+        <!-- <option value="low">Low</option> -->
+        <option value="green">Low</option>
+      </select>
+      
       <input type="submit" value="Create New Task">
     </form>
 
@@ -21,7 +31,7 @@
       </ul>
     </div>
 
-    <script src="./src/index.js"></script>
+    <script defer src="./src/index.js"></script>
   </div>
 
 </body>
